--- a/backend/package.json
+++ b/backend/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
+    "postinstall": "cd frontend && npm install && npm run build && rm -rf backend/dist && mv dist backend/dist",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Backend do gestor de tarefas, serve a API e o frontend compilado",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
