--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
 	"version": "1.0.0",
 	"main": "server.js",
 	"scripts": {
-		"postinstall": "cd frontend/Gestor-Tarefas && npm install && npm run build && rm -rf ../../backend/dist && mv dist ../../backend/dist",
-		"start": "node backend/server.js",
+		"postinstall": "cd frontend/Gestor-Tarefas && npm install && npm run build && rm -rf backend/dist && mv dist backend/dist",
+		"start": "node server.js",
 		"dev": "nodemon server.js"
 	},
 	"keywords": [],
